fix scrollbars appearing on action-bar

--- a/addon/styles/action-bar.scss
+++ b/addon/styles/action-bar.scss
@@ -1,10 +1,8 @@
-section, .container {
-  .action-bar .container { 
-    padding: 0;
-  }
-}
-  
 .action-bar {
+  .animated-container {
+    overflow: hidden;
+  }
+
   .page {
     display: flex;
     width: 100%;
@@ -28,6 +26,7 @@ section, .container {
     white-space: nowrap;
     overflow: hidden;
     text-decoration: none;
+    background: $white;
 
     &:hover {
       box-shadow: 0 2px 4px 2px rgba($black, 0.2);
@@ -60,11 +59,11 @@ section, .container {
   }
 
   .next-page {
-    margin-left: 1rem;
+    margin-left: 0.5rem;
   }
 
   .previous-page {
-    margin-right: 1rem;
+    margin-right: 0.5rem;
     svg {
       transform: rotate(180deg);
     }
@@ -75,7 +74,6 @@ section, .container {
     flex: 1;
     width: auto;
     flex-shrink: 0;
-    overflow: hidden;
 
     & > * {
       flex-shrink: 0;
